--- a/SGDPV/Ejercicios/Calculadora/calculadora.kv
+++ b/SGDPV/Ejercicios/Calculadora/calculadora.kv
@@ -1,11 +1,19 @@
 BoxLayout:
     orientation: 'vertical'
+    padding: [15, 15, 15, 15]
     canvas.before:
         Color:
-            rgba: 0.1, 0.1, 0.1, 1  # Fondo oscuro
-        Rectangle:
+            rgba: 1.0, 0.820, 0.863, 1
+        RoundedRectangle:
             size: self.size
             pos: self.pos
+            radius: [30, 30, 30, 30]
+        Color:
+            rgba: 0.682, 0.933, 0.933, 1
+        RoundedRectangle:
+            size: [self.size[0] - 10, self.size[1] - 10]
+            pos: [self.pos[0] + 5, self.pos[1] + 5]
+            radius: [25, 25, 25, 25]
 
     Label:
         id: Screen
@@ -14,272 +22,279 @@ BoxLayout:
         size_hint_y: 0.2
         halign: "right"
         valign: "middle"
-        color: 1, 1, 1, 1  # Texto blanco
+        text_size: self.width, None 
+        color: 1, 1, 1, 1
         padding: [10, 20]
+        canvas.before:
+            Color:
+                rgba: 0.05, 0.05, 0.05, 1
+            RoundedRectangle:
+                size: self.size
+                pos: self.pos
+                radius: [15, 15, 15, 15]
 
     GridLayout:
         cols: 4
         rows: 5
-        spacing: 10  # Espaciado entre botones
-        padding: [10, 10]  # Padding para el contorno del Grid
+        spacing: 10
+        padding: [10, 10]
 
-        # Botones
         Button:
             text: "("
             on_press: app.openPths()
             background_normal: ""
-            background_color: 0.3, 0.3, 0.8, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.3, 0.3, 0.8, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: ")"
             on_press: app.closePths()
             background_normal: ""
-            background_color: 0.3, 0.3, 0.8, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.3, 0.3, 0.8, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "."
             on_press: app.addDot()
             background_normal: ""
-            background_color: 0.3, 0.3, 0.8, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.3, 0.3, 0.8, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: ","
             on_press: app.addComa()
             background_normal: ""
-            background_color: 0.3, 0.3, 0.8, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.3, 0.3, 0.8, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "7"
             on_press: app.seven()
             background_normal: ""
-            background_color: 0.2, 0.6, 0.9, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.2, 0.6, 0.9, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "8"
             on_press: app.eight()
             background_normal: ""
-            background_color: 0.2, 0.6, 0.9, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.2, 0.6, 0.9, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "9"
             on_press: app.nine()
             background_normal: ""
-            background_color: 0.2, 0.6, 0.9, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.2, 0.6, 0.9, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "/"
             on_press: app.divisionOp()
             background_normal: ""
-            background_color: 0.9, 0.3, 0.3, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.9, 0.3, 0.3, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "4"
             on_press: app.four()
             background_normal: ""
-            background_color: 0.2, 0.6, 0.9, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.2, 0.6, 0.9, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "5"
             on_press: app.five()
             background_normal: ""
-            background_color: 0.2, 0.6, 0.9, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.2, 0.6, 0.9, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "6"
             on_press: app.six()
             background_normal: ""
-            background_color: 0.2, 0.6, 0.9, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.2, 0.6, 0.9, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "*"
             on_press: app.multiplyOp()
             background_normal: ""
-            background_color: 0.9, 0.3, 0.3, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.9, 0.3, 0.3, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "1"
             on_press: app.one()
             background_normal: ""
-            background_color: 0.2, 0.6, 0.9, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.2, 0.6, 0.9, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "2"
             on_press: app.two()
             background_normal: ""
-            background_color: 0.2, 0.6, 0.9, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.2, 0.6, 0.9, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "3"
             on_press: app.three()
             background_normal: ""
-            background_color: 0.2, 0.6, 0.9, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.2, 0.6, 0.9, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "-"
             on_press: app.substractOp()
             background_normal: ""
-            background_color: 0.9, 0.3, 0.3, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.9, 0.3, 0.3, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "0"
             on_press: app.cero()
             background_normal: ""
-            background_color: 0.2, 0.6, 0.9, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.2, 0.6, 0.9, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "CE"
             on_press: app.clean()
             background_normal: ""
-            background_color: 0.9, 0.3, 0.3, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.9, 0.3, 0.3, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "="
             on_press: app.equalOp()
             background_normal: ""
-            background_color: 0.3, 0.8, 0.3, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.3, 0.8, 0.3, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
 
         Button:
             text: "+"
             on_press: app.plusOp()
             background_normal: ""
-            background_color: 0.9, 0.3, 0.3, 1
+            background_color: 0, 0, 0, 0
             canvas.before:
                 Color:
-                    rgba: self.background_color
+                    rgba: 0.9, 0.3, 0.3, 1
                 RoundedRectangle:
                     size: self.size
                     pos: self.pos
-                    radius: [20]
+                    radius: [20, 20, 20, 20]
