--- a/SGDPV/Ejercicios/Profe/Ejemplos_Kivy/Video/video.kv
+++ b/SGDPV/Ejercicios/Profe/Ejemplos_Kivy/Video/video.kv
@@ -1,2 +1,5 @@
-Video:
-    source: 'Escritorio/Fuego.mp4'
+VideoPlayer:
+    source: 'C:/Users/juanc/OneDrive/Escritorio/Fuego.mp4'
+    state: 'play'
+    options: {'eos': 'loop'}
+    allow_fullscreen: True
